--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -18,6 +18,15 @@
     android:orientation="vertical" >
 
     <EditText
+        android:id="@android:id/text2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="6dip"
+        android:layout_marginRight="6dip"
+        android:layout_marginTop="8dip"
+        android:hint="@string/title_hint" />
+    
+    <EditText
         android:id="@android:id/text1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
