--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-** Copyright 2012 two forty four a.m. LLC <http://www.twofortyfouram.com>
-**
 ** Licensed under the Apache License, Version 2.0 (the "License");
 ** you may not use this file except in compliance with the License.
 ** You may obtain a copy of the License at <http://www.apache.org/licenses/LICENSE-2.0>
@@ -17,22 +15,73 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <EditText
-        android:id="@android:id/text2"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="6dip"
-        android:layout_marginRight="6dip"
-        android:layout_marginTop="8dip"
-        android:hint="@string/title_hint" />
-    
-    <EditText
-        android:id="@android:id/text1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="6dip"
-        android:layout_marginRight="6dip"
-        android:layout_marginTop="8dip"
-        android:hint="@string/message_hint" />
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+
+
+	    <RadioGroup android:layout_width="fill_parent"
+	                android:layout_height="wrap_content" android:orientation="vertical"
+	                android:id="@+id/group1">
+	    
+		    <RadioButton
+		        android:id="@+id/radioButton1"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:text="@string/notification_label"
+		        android:checked="true" />
+		
+		    <EditText
+		        android:id="@+id/text2"
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:layout_marginLeft="6dip"
+		        android:layout_marginRight="6dip"
+		        android:layout_marginTop="8dip"
+		        android:hint="@string/title_hint" />
+		    
+		    <EditText
+		        android:id="@+id/text1"
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:layout_marginLeft="6dip"
+		        android:layout_marginRight="6dip"
+		        android:layout_marginTop="8dip"
+		        android:hint="@string/message_hint" />
+		
+		    <RadioButton
+		        android:id="@+id/radioButton2"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:text="@string/widget_label" />
+
+		    <Spinner
+		        android:id="@+id/spinner1"
+		        android:layout_width="match_parent"
+		        android:layout_height="wrap_content" />
+		    
+		    <EditText
+		        android:id="@+id/text3"
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:layout_marginLeft="6dip"
+		        android:layout_marginRight="6dip"
+		        android:layout_marginTop="8dip"
+		        android:hint="@string/id_hint" /> 
+		    
+		     <EditText
+		        android:id="@+id/text4"
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:layout_marginLeft="6dip"
+		        android:layout_marginRight="6dip"
+		        android:layout_marginTop="8dip"
+		        android:hint="@string/value_hint" />
+	     
+	     </RadioGroup>
+     
+	</ScrollView>
 
 </LinearLayout>
